# bedrock-tracer

./: .gitignore  Makefile  README.md  docker-compose.yaml  gen_bpftrace.py  pyproject.toml
.github/workflows/: image_release.yaml
bpftrace/: Makefile  README.md
bpftrace/bpftrace/cgroup/: io_trace.bt  memory_trace.bt  silent_io_trace.bt
bpftrace/bpftrace/command/: memory_trace.bt  silent_io_trace.bt  silent_memory_trace.bt
bpftrace/bpftrace/execute/: silent_io_trace.bt  silent_memory_trace.bt
bpftrace/bpftrace/pid/: io_trace.bt  memory_trace.bt
bpftrace/cgroup/: silent_memory_trace.bt
bpftrace/cgroup_and_command/: io_trace.bt  memory_trace.bt  silent_io_trace.bt  silent_memory_trace.bt
bpftrace/command/: io_trace.bt
bpftrace/execute/: io_trace.bt  memory_trace.bt
bpftrace/pid/: silent_io_trace.bt  silent_memory_trace.bt
bpftrace/templates/bpftrace/: io_trace.bt.j2
examples/container_trace_inside_container/: README.md
src/: app.py  builder.py  cli.py  container.py  dispatch.py  handlers.py  matchbox.py  resolver.py
src/containers/: __init__.py  docker.py  kubernetes.py
src/dependencies/: command.py  cri.py  kernel.py  path.py
src/tracer/: __init__.py  files.py  mono.py  rotation.py  tracer.py
src/utils/: __init__.py  cri.py  files.py  mounts.py  process.py  size.py  timestamp.py  units.py
templates/bpftrace/: memory_trace.bt.j2
tests/: end_2_end_test.sh  shutdown_integration_test.sh  toys_test.sh  tracings_test.sh
